tests/ui/on-unimplemented/suggest_tuple_wrap.stderr
error[E0277]: the trait bound `u8: TupleArgs` is not satisfied
  --> $DIR/suggest_tuple_wrap.rs:15:24
   |
LL |     convert_into_tuple(42_u8);
   |     ------------------ ^^^^^ the trait `TupleArgs` is not implemented for `u8`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the following other types implement trait `TupleArgs`:
             (A, B)
             (A, B, C)
             (A,)
note: required by a bound in `convert_into_tuple`
  --> $DIR/suggest_tuple_wrap.rs:12:32
   |
LL | fn convert_into_tuple(_x: impl TupleArgs) {}
   |                                ^^^^^^^^^ required by this bound in `convert_into_tuple`
help: use a unary tuple instead
   |
LL |     convert_into_tuple((42_u8,));
   |                        +     ++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
